--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,8 @@ reqwest = { version = "0.11.16", features = ["blocking", "rustls-tls", "json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 anyhow = "1.0.70"
+
+# Hash verification dependencies
+sha2 = "0.10.6"
+rayon = "1.7.0"
+hex = "0.4.3"
