--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,8 @@ anyhow = "1.0.70"
 
 # Hash verification dependencies
 sha2 = "0.10.6"
-rayon = "1.7.0"
+rayon = "1.10"
+walkdir = "2.3.3"
+memmap2 = "0.7.1"
+num_cpus = "1.15.0"
 hex = "0.4.3"
