--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,34 +2,25 @@
 name = "e621_downloader"
 version = "1.7.2"
 authors = ["McSib <mcsibsart@gmail.com>"]
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-# These are added to fix security vulnerabilities.
-regex = "1.8.1"
-smallvec = "1.10.0"
-tokio = "1.28.0"
-rustls = "0.23.26"
-h2 = "0.4.9"
-bumpalo = "3.12.1"
-remove_dir_all = "1.0.0"
-
-once_cell = "1.17.1"
+once_cell = "1.21.3"
 base64-url = "3.0.0"
-indicatif = "0.17.3"
+indicatif = "0.17.12"
 dialoguer = "0.11.0"
-console = "0.15.5"
-log = "0.4.17"
-simplelog = "0.12.1"
-reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls", "json"] }
-serde = { version = "1.0.160", features = ["derive"] }
-serde_json = "1.0.96"
-anyhow = "1.0.70"
+console = "0.16.0"
+log = "0.4.27"
+simplelog = "0.12.2"
+reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+anyhow = "1.0.98"
 
 # Hash verification dependencies
-sha2 = "0.10.6"
+sha2 = "0.11.0-rc.0"
 rayon = "1.10"
-walkdir = "2.3.3"
+walkdir = "2.5.0"
 memmap2 = "0.9.5"
-num_cpus = "1.15.0"
+num_cpus = "1.17.0"
 hex = "0.4.3"
