--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "e621_downloader"
-version = "1.7.2"
+version = "1.8.0"
 authors = ["McSib <mcsibsart@gmail.com>"]
 edition = "2024"
 
 [dependencies]
 once_cell = "1.21.3"
 base64-url = "3.0.0"
-indicatif = "0.17.12"
+indicatif = "0.18.0"
 dialoguer = "0.11.0"
 console = "0.16.0"
 log = "0.4.27"
@@ -24,3 +24,7 @@ walkdir = "2.5.0"
 memmap2 = "0.9.5"
 num_cpus = "1.17.0"
 hex = "0.4.3"
+
+# Memory efficiency and system info
+smallvec = "2.0.0-alpha.11"
+sysinfo = "0.36.0"
