--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ hex = "0.4.3"
 # Memory efficiency and system info
 smallvec = "2.0.0-alpha.11"
 sysinfo = "0.36.0"
+chrono = { version = "0.4.41", features = ["serde"] }
