--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ dialoguer = "0.11.0"
 console = "0.16.0"
 log = "0.4.27"
 simplelog = "0.12.2"
-reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json"] }
+reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 anyhow = "1.0.98"
@@ -29,3 +29,14 @@ hex = "0.4.3"
 smallvec = "2.0.0-alpha.11"
 sysinfo = "0.36.0"
 chrono = { version = "0.4.41", features = ["serde"] }
+
+# Performance optimization dependencies
+dashmap = "5.5"
+lru = "0.12"
+flume = "0.11"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tracing-appender = "0.2"
+tokio = { version = "1.35", features = ["full"] }
+futures = "0.3"
+parking_lot = "0.12"
