--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,7 @@ tracing-appender = "0.2"
 tokio = { version = "1.35", features = ["full"] }
 futures = "0.3"
 parking_lot = "0.12"
+
+# Windows-specific dependencies
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi"] }
