--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "e621_downloader"
 version = "1.8.0"
-authors = ["McSib <mcsibsart@gmail.com>"]
+authors = ["furr-tec"]
 edition = "2024"
 
 [dependencies]
@@ -38,8 +38,10 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tracing-appender = "0.2.3"
 tokio = { version = "1.45.1", features = ["full"] }
-futures = "0.3.28"
+futures = "0.3.31"
 parking_lot = "0.12.4"
+regex = "1.11.1"
+lazy_static = "1.5.0"
 
 # Windows-specific dependencies
 [target.'cfg(windows)'.dependencies]
