Enhanced filename sanitization, download pipeline, and concurrency handling:
- Added long filename truncation with hashing and extension preservation in `remove_invalid_chars` function.
- Improved busy-waiting prevention in download pipeline with activity detection and conditional delays.
- Introduced `with_concurrency` method for flexible worker configuration in `StreamingConfig`.
- Updated `.gitignore` to include new files and reports for better codebase management.
- Refactored streaming processor for improved memory management, logging, and collection handling.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 rust_Panic.txt
 readme.txt
 issues_rr.txt
+artists.json
+tags.txt.backup
+/IMPROVEMENT_ROADMAP.md
+/NASA_CODING_STANDARDS_AUDIT_REPORT.md
