--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,15 @@ simplelog = "0.12.2"
 reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+toml = "0.8.12"
+thiserror = "1.0.58"
+notify = "6.1.1"
 anyhow = "1.0.98"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 
 # Hash verification dependencies
 sha2 = "0.11.0-rc.0"
+blake3 = "1.8.2"
 rayon = "1.10"
 walkdir = "2.5.0"
 memmap2 = "0.9.5"
@@ -42,6 +47,7 @@ futures = "0.3.31"
 parking_lot = "0.12.4"
 regex = "1.11.1"
 lazy_static = "1.5.0"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 # Windows-specific dependencies
 [target.'cfg(windows)'.dependencies]
