--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "e621_downloader"
 version = "1.8.0"
-authors = ["furr-tec"]
+authors = ["Furr-Tec Studios"]
 edition = "2024"
 
 [dependencies]
