--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
 name = "e621_downloader"
-version = "1.8.0"
+version = "3.0.0"
 authors = ["Furr-Tec Studios"]
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 once_cell = "1.21.3"
 base64-url = "3.0.0"
+base64 = "0.21.7"
 indicatif = "0.18.0"
 dialoguer = "0.11.0"
 console = "0.16.0"
 log = "0.4.27"
 simplelog = "0.12.2"
-reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate"] }
+reqwest = { version = "0.12.21", features = ["blocking", "rustls-tls", "json", "gzip", "brotli", "deflate", "stream"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-toml = "0.8.12"
-thiserror = "1.0.58"
+toml = "0.8.23"
+thiserror = "1.0.69"
 notify = "6.1.1"
 anyhow = "1.0.98"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
@@ -40,7 +41,7 @@ dashmap = "5.5.3"
 lru = "0.16.0"
 flume = "0.11"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing-appender = "0.2.3"
 tokio = { version = "1.45.1", features = ["full"] }
 futures = "0.3.31"
@@ -48,6 +49,10 @@ parking_lot = "0.12.4"
 regex = "1.11.1"
 lazy_static = "1.5.0"
 uuid = { version = "1.17.0", features = ["v4"] }
+web-sys = "0.3.77"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.31.0"
+urlencoding = "2.1.3"
 
 # Windows-specific dependencies
 [target.'cfg(windows)'.dependencies]
