Removed outdated example modules related to v3 functionality
- Deleted unused example scripts:
  - `blacklist_handling_example.rs`
  - `cli_example.rs`
  - `disk_verifier_example.rs`
  - `download_engine_example.rs`
  - `example.rs`
  - `file_processor_example.rs`
  - `logger_example.rs`
- Cleaned up legacy examples to reduce clutter and align with current implementation standards.

--- a/e621.toml
+++ b/e621.toml
@@ -1,6 +1,6 @@
 [auth]
-username = "your_username"
-api_key = "your_api_key_here"
+username = ""
+api_key = ""
 
 [options]
 download_favorites = true
@@ -8,13 +8,17 @@ safe_mode = false
 
 [query]
 tags = [
-    "femboy",
-    "tomboy",
-    "cum",
+    "wolf",
+    "muscle",
+    "solo",
+    "femboys_and_firearms",
+    "femboy_rimming",
 ]
 artists = [
     "nekoyasha",
     "dogbreath",
+    "angiewolfnsfw",
+    "angiewolf",
 ]
 pools = [
     12345,
